git-annex (0.25) UNRELEASED; urgency=low

  * Fix dropping of files using the URL backend.
  * Fix support for remotes with '.' in their names.

 -- Joey Hess <joeyh@debian.org>  Thu, 17 Mar 2011 11:46:53 -0400

git-annex (0.24) unstable; urgency=low

  Branched the 0.24 series, which will be maintained for a while to
  support v1 git-annex repos, while main development moves to the 0.2011
  series, with v2 git-annex repos.

  * Add Suggests on graphviz. Closes: #618039
  * When adding files to the annex, the symlinks pointing at the annexed
    content are made to have the same mtime as the original file.
    While git does not preserve that information, this allows a tool
    like metastore to be used with annexed files.
    (Currently this is only done on systems supporting POSIX 200809.)

 -- Joey Hess <joeyh@debian.org>  Wed, 16 Mar 2011 18:35:13 -0400

git-annex (0.23) unstable; urgency=low

  * Support ssh remotes with a port specified.
  * whereis: New subcommand to show where a file's content has gotten to.
  * Rethink filename encoding handling for display. Since filename encoding
    may or may not match locale settings, any attempt to decode filenames 
    will fail for some files. So instead, do all output in binary mode.

 -- Joey Hess <joeyh@debian.org>  Sat, 12 Mar 2011 15:02:49 -0400

git-annex (0.22) unstable; urgency=low

  * Git annexes can now be attached to bare git repositories.
    (Both the local and remote host must have this version of git-annex
    installed for it to work.)
  * Support filenames that start with a dash; when such a file is passed
    to a utility it will be escaped to avoid it being interpreted as an
    option. (I went a little overboard and got the type checker involved
    in this, so such files are rather comprehensively supported now.)
  * New backends: SHA512 SHA384 SHA256 SHA224
    (Supported on systems where corresponding shaNsum commands are available.)